{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 30,
  "lineage": "d5eaac4b-9a56-2568-7e9e-bbad5a20ac40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:internet-gateway/igw-0270aee3d5e280663",
            "id": "igw-0270aee3d5e280663",
            "owner_id": "232235993791",
            "tags": {
              "Name": "hkjung-web-igw"
            },
            "tags_all": {
              "Name": "hkjung-web-igw"
            },
            "vpc_id": "vpc-0c78eb730cf8bd989"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:route-table/rtb-01a3f66869398b194",
            "id": "rtb-01a3f66869398b194",
            "owner_id": "232235993791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0270aee3d5e280663",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hkjung-web-public-rt"
            },
            "tags_all": {
              "Name": "hkjung-web-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78eb730cf8bd989"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010c5f291cfee6f78",
            "route_table_id": "rtb-01a3f66869398b194",
            "subnet_id": "subnet-0ffec8aa2219834c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081e061ca63d53f4e",
            "route_table_id": "rtb-01a3f66869398b194",
            "subnet_id": "subnet-0f93ae0afae2ae4cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:security-group/sg-0870426be98801987",
            "description": "Allow HTTP inbound traffic for Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0870426be98801987",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hkjung-web-fargate-sg",
            "name_prefix": "",
            "owner_id": "232235993791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hkjung-web-fargate-sg"
            },
            "tags_all": {
              "Name": "hkjung-web-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78eb730cf8bd989"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:subnet/subnet-0ffec8aa2219834c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffec8aa2219834c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "232235993791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkjung-web-public-subnet-1"
            },
            "tags_all": {
              "Name": "hkjung-web-public-subnet-1"
            },
            "vpc_id": "vpc-0c78eb730cf8bd989"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:subnet/subnet-0f93ae0afae2ae4cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f93ae0afae2ae4cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "232235993791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkjung-web-public-subnet-2"
            },
            "tags_all": {
              "Name": "hkjung-web-public-subnet-2"
            },
            "vpc_id": "vpc-0c78eb730cf8bd989"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:232235993791:vpc/vpc-0c78eb730cf8bd989",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02bb414213b7057",
            "default_route_table_id": "rtb-096b5a3e22b787d14",
            "default_security_group_id": "sg-08e2f387e2269923f",
            "dhcp_options_id": "dopt-0c2b99e515ed24e1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c78eb730cf8bd989",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096b5a3e22b787d14",
            "owner_id": "232235993791",
            "tags": {
              "Name": "hkjung-web-vpc"
            },
            "tags_all": {
              "Name": "hkjung-web-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}